Fix spacing in reviews

--- a/frontend/src/components/Reviews/Reviews.css
+++ b/frontend/src/components/Reviews/Reviews.css
@@ -15,16 +15,17 @@
 
 #spot-reviews-rating {
     display: flex;
+    width: 100%;
 }
 
 #spot-reviews-rating>i {
-    padding-right: 10%;
+    padding-right: .30rem;
     align-self: center;
     font-size: .8rem;
 }
 
 #spot-reviews-numreviews-separator {
-    padding: 0 1px 0 2px;
+    margin: 0 .25rem;
 }
 
 .reviews-outer-container {
